# Xindi-Quantum

./: README.md
CADBuilder/: CMakeLists.txt  commandhandler.h  commandinputdialog.cpp  commandinputdialog.h  commandparser.h  config.json  extruder.cpp  extruder.h  integration_tests.cpp  main.cpp  mainwindow.cpp  mainwindow.h  trapezoidmodeler.cpp  trapezoidmodeler.h  unit_tests.cpp  visualizationwindow.cpp  visualizationwindow.h  vtkconverter.cpp  vtkconverter.h
Release-1.0.0/: .ninja_deps  .ninja_log  CADBuilder.exp  CADBuilder.lib  CADBuilderTests.exp  CADBuilderTests.lib  CMakeCache.txt.prev  CTestTestfile.cmake  build.ninja  cmake_install.cmake  config.json  invalid_path.brep  output.brep  test_model.brep
Release-1.0.0/.cmake/api/v1/reply/: cmakeFiles-v1-07f0e7c44edf5a3910a6.json  codemodel-v2-2cc77135fd87c9675e03.json  directory-.-Release-430f59a4598cec2c05e0.json  index-2025-04-02T07-43-05-0433.json  target-CADBuilder-Release-414e4a7e1fd7b769e673.json  target-CADBuilderTests-Release-6d0650ee32c2d3d03158.json  target-CADBuilderTests_autogen-Release-21f908551b84a9c4c282.json
Release-1.0.0/.cmake/api/v1/reply.prev/: cache-v2-a61676c750e33f123b0d.json  codemodel-v2-385709f22752341678ad.json  directory-.-Release-84b5e852f10075d65fd7.json  index-2025-04-02T07-28-11-0706.json  target-CADBuilder-Release-356129794512880e4260.json  target-CADBuilderTests-Release-38e9bb8df917269a0f8f.json  target-CADBuilder_autogen-Release-28db85a49715edc7d019.json
Release-1.0.0/.qtc_clangd/: compile_commands.json
Release-1.0.0/.qtc_clangd/.cache/clangd/index/: Aspect_Eye.hxx.5632D1AD9D378AD1.idx  Aspect_FrustumLRBT.hxx.4DD4AD5C67A52947.idx  Aspect_HatchStyle.hxx.8C5A26C7A836CE9D.idx  Aspect_InteriorStyle.hxx.720CEF33010BE909.idx  Aspect_PolygonOffsetMode.hxx.71A25ECA0D862AAE.idx  Aspect_TypeOfDeflection.hxx.332974BD5F311A4D.idx  Aspect_TypeOfDisplayText.hxx.3B4F1F59E41299BE.idx  Aspect_TypeOfFacingModel.hxx.30920866A83701E8.idx  Aspect_TypeOfHighlightMethod.hxx.B065B29A295A540A.idx  Aspect_TypeOfLine.hxx.161D8C93270902C6.idx  Aspect_TypeOfMarker.hxx.86523C8CCE944C18.idx  Aspect_TypeOfStyleText.hxx.7A95549DD88F13FB.idx  Aspect_TypeOfTriedronPosition.hxx.8419FAD31B8FC141.idx  BRepBuilderAPI_Command.hxx.58E733574F886F17.idx  BRepBuilderAPI_EdgeError.hxx.CCB9737E3484B562.idx  (+986 more)
Release-1.0.0/CADBuilderLib_autogen/: mocs_compilation.cpp
Release-1.0.0/CADBuilderLib_autogen/EWIEGA46WW/: moc_mainwindow.cpp  qrc_src.cpp
Release-1.0.0/CADBuilder_autogen/: mocs_compilation.cpp
Release-1.0.0/CADBuilder_autogen/EWIEGA46WW/: moc_commandinputdialog.cpp  moc_mainwindow.cpp  moc_visualizationwindow.cpp  qrc_src.cpp
Release-1.0.0/tests/: CTestTestfile.cmake  cmake_install.cmake
doxygen/html/: annotated.html  class_command_handler-members.html  class_command_handler.html  class_command_input_dialog-members.html  class_command_input_dialog.html  class_command_parser-members.html  class_command_parser.html  class_extruder-members.html  class_extruder.html  class_main_window-members.html  class_main_window.html  class_trapezoid_modeler-members.html  class_trapezoid_modeler.html  class_visualization_window-members.html  class_visualization_window.html  class_vtk_converter-members.html  class_vtk_converter.html  classes.html  commandhandler_8h.html  commandhandler_8h_source.html  commandinputdialog_8h.html  commandinputdialog_8h_source.html  commandparser_8h.html  commandparser_8h_source.html  doxygen_crawl.html  extruder_8h.html  extruder_8h_source.html  files.html  functions.html  functions_func.html  hierarchy.html  index.html  mainwindow_8h.html  mainwindow_8h_source.html  trapezoidmodeler_8h.html  trapezoidmodeler_8h_source.html  visualizationwindow_8h.html  visualizationwindow_8h_source.html  vtkconverter_8h.html  vtkconverter_8h_source.html
doxygen/html/search/: all_0.js  all_1.js  all_2.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  classes_0.js  classes_1.js  classes_3.js  classes_4.js  files_0.js  files_1.js  files_3.js  files_4.js  functions_1.js  functions_2.js  functions_3.js  functions_5.js  functions_8.js  functions_9.js  functions_a.js  searchdata.js
doxygen/latex/: annotated.tex  class_command_handler.tex  class_command_input_dialog.eps  class_command_input_dialog.tex  class_command_parser.tex  class_extruder.tex  class_main_window.tex  class_trapezoid_modeler.tex  class_visualization_window.eps  class_visualization_window.tex  class_vtk_converter.tex  commandhandler_8h.tex  commandhandler_8h_source.tex  commandinputdialog_8h.tex  commandinputdialog_8h_source.tex  commandparser_8h.tex  commandparser_8h_source.tex  extruder_8h.tex  extruder_8h_source.tex  files.tex  hierarchy.tex  mainwindow_8h.tex  mainwindow_8h_source.tex  refman.tex  trapezoidmodeler_8h.tex  trapezoidmodeler_8h_source.tex  visualizationwindow_8h.tex  visualizationwindow_8h_source.tex  vtkconverter_8h.tex  vtkconverter_8h_source.tex
